[project]
name = "pyudmi"
version = "0.1.0"
description = "A Python library for UDMI"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt (>=2.1.0,<3.0.0)",
    "bac0 (>=2024.9.20,<2025.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.poetry]
packages = [
    { include = "udmi", from = "../../gencode/python" },
]

